# shyft

./: .travis.yml
core/: CMakeLists.txt
shyft/api/: CMakeLists.txt
shyft/orchestration/: __init__.py  simulator.py
shyft/repository/: geo_ts_repository_collection.py  interfaces.py
shyft/repository/netcdf/: region_model.py  yaml_config.py
shyft/tests/: test_netcdf_region_model_repository.py
test/: CMakeLists.txt
